--- a/styles/design.css
+++ b/styles/design.css
@@ -115,10 +115,87 @@ p{
     margin: 0 auto;
 }
 
+/* main section */
+main{
+    /* width: 1450px; */
+    margin: 0 auto;
+    background-color: black;
+}
+/* change section */
+.changes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* width: 1050px;
+    margin: 0 auto;
+    align-items: center; */
+    /* height: 720px; */
+    /* padding: 80px 0; */
+    /* margin-bottom: 40px; */
+    /* border: 1px solid red; */
+    /* background-color: black; */
+}
+.changes h2,h6,p{
+    color: rgb(255, 255, 255);
+}
+.Change-heading{
+    margin-top: 70px;
+    margin-bottom: 10px;
+    font-size: 40px;
+    font-weight: 800;
+}
+.changes h6{
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 1px;
+}
+.texting{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.texting h2{
+    font-size: 45px;
+}
+.texting p{
+    font-size: smaller;
+    text-align: center;
+    opacity: 0.4;
+    margin-top: 15px;
+    margin-bottom: 70px;
+}
+.cards{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card-style{
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* margin-left: 30px; */
+}
+.card-style img{
+    border-radius: 50%;
+}
+.card-style p{
+    font-size: smaller;
+    width: 80%;
+    text-align: center;
+    margin-bottom: 100px;
+    opacity: 0.4;
+    line-height: 20px;
+}
 
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
+    /* header section */
     .banner{
         flex-direction: column;
     }
@@ -139,4 +216,7 @@ p{
         margin-left: 30px;
         margin-right: 30px;
     }
+    /* main */
+    /* change section */
+    
 }
